// DBML group export excluding Django system tables
// Generated from Django models and migrations
// Group file: 06_community_academic_interactions.dbml
// NHOM 6: TUONG TAC HOC THUAT VA CONG DONG
// Only includes intra-group relationships

// Primary tables
Table blog_posts {
Table BlogComments {
  id integer [pk, not null]
  content varchar [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  is_deleted boolean [not null]
  likes integer [not null]
  status varchar [not null]
  blog_post_id integer [not null]
  deleted_by_id integer
  parent_id integer
  user_id integer [not null]
}
  id integer [pk, not null]
  title varchar [not null]
  content varchar [not null]
  author_id integer
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
  status varchar [not null]
  tags varchar
  category_id integer
  slug varchar [not null]
  featured_image varchar
  sumary varchar
  published_at datetime
  views integer [not null]
  likes integer [not null]
  allow_comments boolean [not null]
  is_featured boolean [not null]
}

Table QnA {
  id integer [pk, not null]
  course_id integer [not null]
  lesson_id integer [not null]
  question varchar [not null]
  user_id integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
  status varchar [not null]
  views integer [not null]
  description varchar
  tags varchar
  votes integer [not null]
  report_count integer [not null]
  last_report_reason varchar
  last_reported_at datetime
}

Table QnAAnswers {
  id integer [pk, not null]
  qna_id integer [not null]
  answer varchar [not null]
  user_id integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
  is_accepted boolean [not null]
  likes integer [not null]
}

Table Forums {
  id integer [pk, not null]
  course_id integer
  title varchar [not null]
  description varchar
  user_id integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
  status varchar [not null]
}

Table ForumTopics {
  id integer [pk, not null]
  forum_id integer [not null]
  title varchar [not null]
  content varchar [not null]
  user_id integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
  views integer [not null]
  likes integer [not null]
  report_count integer [not null]
  last_report_reason varchar
  last_reported_at datetime
  status varchar [not null]
  is_pinned boolean [not null]
}

Table ForumComments {
  id integer [pk, not null]
  topic_id integer [not null]
  content varchar [not null]
  user_id integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
  parent_id integer
  likes integer [not null]
  status varchar [not null]
  is_best_answer boolean [not null]
}

Table BlogComments {
  id integer [pk, not null]
  blog_post_id integer [not null]
  content varchar [not null]
  user_id integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
  parent_id integer
  likes integer [not null]
  status varchar [not null]
}

// Relationships
Ref: BlogComments.blog_post_id > blog_posts.id
Ref: BlogComments.parent_id > BlogComments.id
Ref: ForumComments.parent_id > ForumComments.id
Ref: ForumComments.topic_id > ForumTopics.id
Ref: ForumTopics.forum_id > Forums.id
Ref: QnAAnswers.qna_id > QnA.id
